@@ -7,6 +7,7 @@
 	* Value.pm: added warn parameter. Unconditionaly issue a warning with
 	a string specified in the model. Mostly usefull for deprecated or accept'ed 
 	parameters
+	* Copyright model: warn if unknown license is used.
 
 2010-09-30 Dominique Dumont  <domi.dumont@free.fr> 1.210
 	* renamed config-edit-dep5 in config-edit-dpkg-copyright
